--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 <title>Evangelio al azar</title>
+<meta charset="UTF-8">
+<link rel="icon" href="ichtus.ico">
 <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
 <div id="container">
 <h1>Generador aleatorio de citas del Evangelio</h1>
 <p>Pulsa el bot&#243n COMENZAR y despu&#233s el bot&#243n PARAR:</p>
-<button type="button" onclick="GeneraNumeros()">COMENZAR</button>
-<button type="button" onclick="Parada()">PARAR</button>
+<button class="button" onclick="GeneraNumeros()">COMENZAR</button>
+<button class="button" onclick="Parada()">PARAR</button>
 <p>
 <p>
 <div>
 <h3 id="evangelio"></h3>
 </div>
-<footer><h5><em>Versi&#243n de prueba - Julio 2021</em></h5></footer>
+<footer><h5><em>Versi&#243n 0.1 - Julio 2021</em></h5></footer>
 </div>
 <script type="text/javascript" src="scripts/funciones.js"></script>
 </body>
