--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h3 id="evangelio"></h3>
 </div>
 <div id="pdfs" style="display: none;">
-<p>Pulsa el bot&#243n correspondiente para leer el Evangelio:</p>
+<p>Busca la cita en el Evangelio correspondiente:</p>
 <button class="button" onclick="VerMateo()">S.MATEO</button>
 <button class="button" onclick="VerMarcos()">S.MARCOS</button>
 <button class="button" onclick="VerLucas()">S.LUCAS</button>
@@ -27,7 +27,7 @@
 <iframe src="" style="width: 100%; height: 600px;" frameborder="1"></iframe>
 <h4><em><a href="https://docs.google.com/viewerng/viewer?url=https://salvadorestran.github.io/evangelio/Biblia_de_Jerusalen.pdf">Biblia de Jerusal&#233n</a> (Ed. Descl&#233e De Brouwer, Bilbao)</em></h4>
 </div>
-<footer><h5><em>Versi&#243n 1.0 - Agosto 2021</em></h5></footer>
+<footer><h5><em>Versi&#243n 1.1 - Septiembre 2021</em></h5></footer>
 </div>
 <script type="text/javascript" src="scripts/funciones.js"></script>
 </body>
