--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <meta charset="UTF-8">
 <link rel="icon" href="ichtus.ico">
 <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-53VF1RR16Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-53VF1RR16Q');
+  </script>
 </head>
 <body>
 <div id="container">
