--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-53VF1RR16Q"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-53VF1RR16Q');
-  </script>
 <title>Evangelio al azar</title>
 <meta charset="UTF-8">
 <link rel="icon" href="ichtus.ico">
@@ -18,25 +9,24 @@
 <body>
 <div id="container">
 <h1>Generador aleatorio de citas del Evangelio</h1>
-<p>Pulsa el bot&#243n COMENZAR y despu&#233s el bot&#243n PARAR:</p>
-<button class="button" onclick="GeneraNumeros()">COMENZAR</button>
-<button class="button" onclick="Parada()">PARAR</button>
 <p>
-<p>
-<div>
-<h3 id="evangelio"></h3>
-</div>
-<div id="pdfs" style="display: none;">
-<p>Se muestra el vers&#237culo del Evangelio que te ha salido:</p>
 <button class="button" onclick="VerMateo()">S.MATEO</button>
 <button class="button" onclick="VerMarcos()">S.MARCOS</button>
 <button class="button" onclick="VerLucas()">S.LUCAS</button>
 <button class="button" onclick="VerJuan()">S.JUAN</button>
+<p></p><p>Pulsa el bot&#243n COMENZAR y despu&#233s el bot&#243n PARAR:</p>
+<button class="button" onclick="GeneraNumeros()">COMENZAR</button>
+<button class="button" onclick="Parada()">PARAR</button>
 <p>
+<div id="pdfs" style="display: block;">
+<div>
+<p>Se muestra el vers&#237culo del Evangelio que te ha salido:
+<strong><em id="evangelio"></em></strong>
+</div>
 <iframe src="" style="width: 100%; height: 600px;" frameborder="1"></iframe>
 <h4><em><a href="https://docs.google.com/viewerng/viewer?url=https://salvadorestran.github.io/evangelio/Biblia_de_Jerusalen.pdf">Biblia de Jerusal&#233n</a> (Ed. Descl&#233e De Brouwer, Bilbao)</em></h4>
 </div>
-<footer><h5><em>Versi&#243n 1.2 - Septiembre 2021</em></h5></footer>
+<footer><h5><em>Versi&#243n 1.3 - Abril 2022</em></h5></footer>
 </div>
 <script type="text/javascript" src="scripts/funciones.js"></script>
 </body>
