--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-53VF1RR16Q"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-53VF1RR16Q');
-  </script>
 <title>Evangelio al azar</title>
 <meta charset="UTF-8">
 <link rel="icon" href="ichtus.ico">
@@ -27,11 +18,11 @@
 <button class="button" onclick="GeneraNumeros()">COMENZAR</button>
 <button class="button" onclick="Parada()">PARAR</button>
 <p>
-<div id="pdfs" style="display: block;">
 <div>
 <p>Se muestra el vers&#237culo del Evangelio que te ha salido:
 <strong><em id="evangelio"></em></strong>
 </div>
+<div id="pdfs" style="display: none;">
 <iframe src="" style="width: 100%; height: 600px;" frameborder="1"></iframe>
 <h4><em><a href="https://docs.google.com/viewerng/viewer?url=https://salvadorestran.github.io/evangelio/Biblia_de_Jerusalen.pdf">Biblia de Jerusal&#233n</a> (Ed. Descl&#233e De Brouwer, Bilbao)</em></h4>
 </div>
