--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-53VF1RR16Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-53VF1RR16Q');
+  </script>
 <title>Evangelio al azar</title>
 <meta charset="UTF-8">
 <link rel="icon" href="ichtus.ico">
